# self-Upgrade

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: lib.py  main.py
src/self_Update/: __init__.py  main.py
