[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-Upgrade"
version = "26.3.0.2"
description = "Self-Upgradeing library"
readme = "README.md"

# Tell the builder that dependencies are handled dynamically
dynamic = ["dependencies"]

# --- Main project keys go here before any sub-tables ---
authors = [
  {name = "Grish-ka", email = "nope@no.stop"},
]
maintainers = [
  {name = "Grish-ka", email = "nope@no.stop"},
]

# --- Sub-tables go at the very bottom ---
[project.optional-dependencies]
cli = [
  "loguru",
]

[project.scripts]
self-update-cli = "self_Update.main:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- THE FIX IS HERE ---
[tool.setuptools.dynamic]
# This tells setuptools to read your dependencies straight out of requirements.txt
dependencies = {file = ["requirements.txt"]}